# EcoAlert

./: .gitignore  LICENSE  README.md  test_ws_connection.rs
.claude/: settings.json
Algo/Matlab/: EcoAlertDetector.m  README.md  VISUALIZATION_README.md  ecoalert_analysis_results.csv  frame_diff_analysis.csv  matlab_visualizer.py  run_video_debug.m  run_video_visualization.m  visualize_frame_diff.m
Algo/Python/: README.md  detector.py  requirements.txt  run_test.py
Algo/YOLO/: .gitignore  README.md  batch_process.py  client_ws.py  config.yaml  detect.py  requirements.txt  server_ws.py  test_server.py  yolo_detector.py
Algo/vlm-detector/: server.js  vlm-detector.html
App/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
App/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
App/src-tauri/.cargo/: config.toml
App/src-tauri/capabilities/: default.json
App/src-tauri/icons/: icon.icns
App/src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  state.rs  store.rs
App/src-tauri/src/pipeline/: alerts.rs  analyzer.rs  channel_auth.rs  decoder.rs  detector.rs  mod.rs  notifier.rs  oauth_server.rs  scheduler.rs  vlm.rs  yolo_detector.rs
App/src-tauri/src/stream/: hls.rs  mod.rs  registry.rs  rtmp.rs
App/webui/: index.html
Document/: README.md  api.md  architecture.md  deployment.md  requirements.md  user-guide.md
Document/assets/: README.md
Document/changelog/: 2026-06-13.md  2026-06-14.md  2026-06-23.md  2026-06-24.md
Document/decisions/: 0001-use-tauri-vite.md  0002-use-json-storage-first.md  0003-simple-model-plus-vlm.md  0004-webhook-notification.md  0005-alarm-lifecycle.md  0006-normalized-roi.md  0007-dedicated-algorithm-scheduler.md  0008-separate-scene-alarm-runtime-state.md  0009-current-person-detection-and-vlm-confirmation.md
Release/: EcoAlert_软件介绍与使用流程.html  发布说明.md  软件使用流程.md
Release/push_streamer/: README.md  config.example.yaml  start.bat
Test/: README.md  detector.py  run_test.py
Tools/: README.md  config.example.yaml  requirements.txt
Tools/push_streamer/: __init__.py  cli.py  push.py
Tools/scenario/: multi_cam.yaml  (+1 more)
exports/: conversation-export-2026-06-23.html  conversation-export-2026-06-23.md
scripts/: package_push_streamer.sh  start_yolo.ps1
(+7 files in other folders)
