[package]
name = "ecoalert"
version = "1.0.0"
description = "EcoAlert 视频监控"
authors = ["liuss"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ecoalert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
time = "=0.3.36"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
