[package]
name = "EcoAlert"
version = "1.0.0"
description = "EcoAlert 视频监控"
authors = ["liuss"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ecoalert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
time = "=0.3.36"
tiny_http = "0.12"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
